force-app/main/default/objects/Service26Config__c/Service26Config__c.object-meta.xml
<CustomObject>
    <description>Oggetto per memorizzare la tabella per il service 26</description>
    <label>Servizio26 Config</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Servizio26 Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servizio26 Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>