force-app/main/default/objects/Service26Config__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Etichetta campo da inviare nella response, può contenere una stringa o un campo del product2 da valutare a runtime</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>