force-app/main/default/objects/Service26Config__c/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <description>Numero di occorrenza, una colonna della tabella 26 utile ad identificare i dati corretti da inviare</description>
    <label>Occorrenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>