force-app/main/default/objects/Service26Config__c/fields/Operando__c.field-meta.xml
<CustomField>
    <fullName>Operando__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Gerarchica che associa un operando alle corrispettive posizioni</description>
    <label>Operando</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Posizione</value>
        </filterItems>
        <filterItems>
            <field>Service26Config__c.Type__c</field>
            <operation>equals</operation>
            <value>Operando</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service26Config__c</referenceTo>
    <relationshipLabel>Servizio26 Configs</relationshipLabel>
    <relationshipName>Servizio26_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>