force-app/main/default/objects/Service26Config__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <description>Famiglia di prodotti</description>
    <label>Famiglia Prodotti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sconto Eur/Giorno</fullName>
            </value>
            <value>
                <fullName>Bonus Eur/Mese</fullName>
            </value>
            <value>
                <fullName>Bonus Eur/Giorno</fullName>
            </value>
            <value>
                <fullName>Sconto Esenzione</fullName>
            </value>
            <value>
                <fullName>Contributo Eur/kWh</fullName>
            </value>
            <value>
                <fullName>Bonus Eur/Kwh</fullName>
            </value>
            <value>
                <fullName>Bonus Percentuale</fullName>
            </value>
            <value>
                <fullName>Sconto Percentuale</fullName>
            </value>
            <value>
                <fullName>Contributo Eur/kW</fullName>
            </value>
            <value>
                <fullName>Contributo Eur/Giorno</fullName>
            </value>
            <value>
                <fullName>Contributo Eur/Mese</fullName>
            </value>
            <value>
                <fullName>VAS Fatturabili</fullName>
            </value>
            <value>
                <fullName>Bonus Eur/SMC</fullName>
            </value>
            <value>
                <fullName>Contributo Eur/SMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>