force-app/main/default/objects/Service26Config__c/fields/SapCode__c.field-meta.xml
<CustomField>
    <fullName>SapCode__c</fullName>
    <description>Contiene codice sap da inviare nel DTO</description>
    <label>Codice Sap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>