force-app/main/default/objects/Service26Config__c/fields/Servizio__c.field-meta.xml
<CustomField>
    <fullName>Servizio__c</fullName>
    <description>Tipo di servizio (Elettrico o Gas)</description>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Energia Elettrica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>