force-app/main/default/objects/Service26Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Distingue il tipo di informazione contenuta, se è un operando o una posizione collegata</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operando</fullName>
            </value>
            <value>
                <fullName>Posizione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>